[gd_scene load_steps=3 format=2]

[ext_resource path="res://Kana_Spirits/KanaPopUp.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 40, 40 )

[node name="Area2D" type="Area2D"]
collision_layer = 8
collision_mask = 0
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Label" type="Label" parent="."]
margin_left = -70.0
margin_top = 48.0
margin_right = 70.0
margin_bottom = 96.0
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Label"]
show_behind_parent = true
margin_right = 140.0
margin_bottom = 48.0
color = Color( 0.180392, 0.482353, 0.384314, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
one_shot = true
[connection signal="body_entered" from="." to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Area2D_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
